--- a/plugin.video.tempus/Changelog.txt
+++ b/plugin.video.tempus/Changelog.txt
@@ -1,6 +1,1 @@
-Visit noobsandnerds.com for all your Kodi needs
-The friendly, helpful, innovative team :)
-www.noobsandnerds.com
-
-Version 0.1:
--July 2017: Initial release
+Tempora addidit (Tempus added) v.1.0.0
